Removal and optimize layout
Removed Video pages in the backend and fixed up some of the layout

--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -22,93 +22,49 @@
 
 <body>
   <my-header></my-header>
-  <div class="mcpage">
-    <p1 class="mc-server-text-1">
-      Join The Time Vortex Minecraft server for a unique survival and creative experience with a friendly community from
-      around the world. Use Bedrock or Java and enter the server IP - mc.thetimevortex.xyz [1.20] - to start
-      playing and
-      unleashing your creativity and survival skills.
-    </p1>
-    <p class="mc-server-text-2">
-      Follow this step-by-step guide to join The Time Vortex Minecraft server, regardless of whether you're using the
-      Java or Bedrock version:
-      <br>
-      <br>
-    </p>
+  <div class="mc-server-guide">
+    <h1>
+      Explore, create, and survive in The Time Vortex Minecraft Server! Dive into a unique adventure with a global
+      community on Bedrock or Java. Connect using the server IP: mc.thetimevortex.xyz [Versions 1.13 - 1.20], and
+      unleash your Minecraft creativity and survival skills.
+    </h1>
+    <h2>How to Join The Time Vortex Minecraft Server</h2>
+    <p>Follow the instructions below to join The Time Vortex Minecraft server on Java and Bedrock editions.</p>
 
-    <p class="mc-p-title">Java Version:</p>
-    <p class="mc-server-text-2">
-      1. Launch Minecraft Java Edition.
-      <br>
-      <br>
-      2. Click on the "Multiplayer" option from the main menu.
-      <br>
-      <br>
-      3. Click the "Add Server" button.
-      <br>
-      <br>
-      4. Give the server a name (e.g. "The Time Vortex").
-      <br>
-      <br>
-      5. Enter the server IP - mc.thetimevortex.xyz - into the "Server Name" field.
-      <br>
-      <br>
-      6. Click "Done".
-      <br>
-      <br>
-      7. Select the server from the server list and click "Join Server".
+    <h3>Java Version:</h3>
+    <ol>
+      <li>Launch Minecraft Java Edition.</li>
+      <li>Select "Multiplayer" from the main menu.</li>
+      <li>Click the "Add Server" button.</li>
+      <li>Name the server as "The Time Vortex".</li>
+      <li>Enter the server IP: <code>mc.thetimevortex.xyz</code> in the "Server Address" field.</li>
+      <li>Click "Done".</li>
+      <li>Select The Time Vortex from the server list and click "Join Server".</li>
+    </ol>
 
-    </p>
-    <p class="mc-p-title">Bedrock Version:</p>
-    <p class="mc-server-text-2">
-      1. Launch Minecraft Bedrock Edition.
-      <br>
-      <br>
-      2. Click on the "Play" button from the main menu.
-      <br>
-      <br>
-      3. Click on the "Servers" tab.
-      <br>
-      <br>
-      4. Click the "Add Server" button.
-      <br>
-      5. Give the server a name (e.g. "The Time Vortex").
-      <br>
-      <br>
-      6. Enter the server IP - mc.thetimevortex.xyz - into the "Server Name" field.
-      <br>
-      <br>
-      7. Click "Done".
-      <br>
-      <br>
-      8. Select the server from the server list and click "Join Server".
-    </p>
-    <p class="mc-p-title">Bedrock Console Version:</p>
-    <p class="mc-app-link mc-server-text-2">
-      1. Download the MC Server Connector app on your phone or tablet/ipad.
+    <h3>Bedrock Version:</h3>
+    <ol>
+      <li>Launch Minecraft Bedrock Edition.</li>
+      <li>Select "Play" from the main menu.</li>
+      <li>Go to the "Servers" tab and click "Add Server".</li>
+      <li>Name the server as "The Time Vortex".</li>
+      <li>Enter the server IP: <code>mc.thetimevortex.xyz</code> and port: <code>8148</code>.</li>
+      <li>Click "Done".</li>
+      <li>Select The Time Vortex from the server list and click "Join Server".</li>
+    </ol>
 
-      Here is the <a href="https://play.google.com/store/apps/details?id=com.smokiem.mcserverconnector&gl=US"
-        target="_blank">Android</a> link.
-
-      Here is the <a href="https://apps.apple.com/us/app/mc-server-connector/id1548251304" target="_blank">IOS</a>
-      link.
-      <br>
-      <br>
-      2. Launch the app.
-      <br>
-      <br>
-      3. Give the server a name (e.g. "The Time Vortex").
-      <br>
-      <br>
-      4. Enter the server IP - mc.thetimevortex.xyz - into the "Server Address" field.
-      <br>
-      <br>
-      5. Click "Start Server". The Server will be under the friends tab.
-      <br>
-      <br>
-      6. Select the server and Join.
-    </p>
-
+    <h3>Bedrock Console Version:</h3>
+    <ol>
+      <li>Download the MC Server Connector app on your device: <a
+          href="https://play.google.com/store/apps/details?id=com.smokiem.mcserverconnector&gl=US"
+          target="_blank">Android</a> | <a href="https://apps.apple.com/us/app/mc-server-connector/id1548251304"
+          target="_blank">iOS</a></li>
+      <li>Launch the MC Server Connector app.</li>
+      <li>Name the server as "The Time Vortex".</li>
+      <li>Enter the server IP: <code>mc.thetimevortex.xyz</code> and port: <code>8148</code>.</li>
+      <li>Click "Start Server". The server will appear under the Friends tab.</li>
+      <li>Select The Time Vortex and click "Join".</li>
+    </ol>
   </div>
 
   <div class="img-banner"></div>
