--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
 
 <body>
   <my-header></my-header>
-  <div class="wrapper index-p bg-accent">
-    <p1 class="index-text">
+  <div class="homepage">
+    <p1>
       I am the Doctor, a Timelord and Demonlord, I am on my 121,027th regeneration. <br><br>
       Step into my TARDIS and enter The Time Vortex. <br><br>
       There, you'll find updates on my YouTube
       Channel, Twitch streams, and even access to some of my Twitch VODs.
       Join me on my Minecraft server for endless adventures.<br><br>
       Get ready for an extraordinary journey through time, space, and boundless entertainment.<br><br>
+      <a class="kofi" href="https://ko-fi.com/thedoctorttv" target="_blank"><img
+          src="https://storage.ko-fi.com/cdn/brandasset/kofi_button_blue.png" alt=""></a>
     </p1>
+
     <iframe class="discord-widget" src="https://discord.com/widget?id=691428243877789726&theme=dark" width="350"
       height="500"></iframe>
-
-    <a class="kofi" href="https://ko-fi.com/thedoctorttv" target="_blank"><img
-        src="https://storage.ko-fi.com/cdn/brandasset/kofi_button_blue.png" alt=""></a>
 
   </div>
 
