--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <my-header></my-header>
   <div class="homepage">
     <p1>
-      I am the Doctor, a Timelord and Demonlord, I am on my 121,027th regeneration. <br><br>
+      I'm the Doctor, a Timelord and Demonlord, I am on my 121,027th regeneration. <br><br>
       Step into my TARDIS and enter The Time Vortex. <br><br>
       There, you'll find updates on my YouTube
       Channel, Twitch streams, and even access to some of my Twitch VODs.
