Site Overhaul Fixing Mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <a class="long_logo" href="New_index.html">
-            <img src="TheTimeVortex Long Logo.png" alt="TheTimeVortex">
+            <img src="/backgrounds/TheTimeVortex Long Logo.png" alt="TheTimeVortex">
         </a>
     </header>
     <div class="container">
@@ -41,9 +41,8 @@
             </p>
 
             <div class="mobile">
-                <br><br><br><br>
-                <iframe class="discord-widget-mobile" src="https://discord.com/widget?id=691428243877789726&theme=dark"
-                    width="350" height="500"></iframe>
+                <br><br>
+                <iframe class="discord-widget-mobile" src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe>
             </div>
 
             <br><br>
