Website Overhaul Final Push

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
 
             <div class="mobile">
-                <br><br>
+                <br><br><br><br>
                 <iframe class="discord-widget-mobile" src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe>
             </div>
 
@@ -113,8 +113,7 @@
 
         </main>
         <aside>
-            <iframe class="discord-widget" src="https://discord.com/widget?id=691428243877789726&theme=dark" width="350"
-                height="500"></iframe>
+            <iframe class="discord-widget" src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe>
         </aside>
     </div>
 
