--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image"
         content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
-
 </head>
 
 <body>
     <header>
-        <a class="long_logo" href="New_index.html">
+        <a class="long_logo" href="index.html">
             <img src="/backgrounds/TheTimeVortex Long Logo.png" alt="TheTimeVortex">
         </a>
     </header>
+
     <div class="container">
         <main>
             <h2>Welcome to TheTimeVortex</h2>
@@ -33,38 +33,29 @@
             <img class="pfp"
                 src="https://images-ext-2.discordapp.net/external/fM_qHs1uVjy8swQWkpeG3_9wn40IDODrqqOzGPbJ6-k/%3Fsize%3D2048/https/cdn.discordapp.com/avatars/624961413500108830/0dec9c838c66d3cf33f0a211816359bd.webp?format=webp&width=671&height=671"
                 alt="TheDoctorTTV"> <br><br>
-            <p>
-                I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. <br>
-                Here you'll find updates on my YouTube Channel, Twitch streams. <br>
-                Join me on my Minecraft server for endless adventures. <br>
-                Get ready for an extraordinary journey through time, space, and boundless entertainment.
+            <p class="about-me">
+                I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll find
+                updates on my YouTube Channel and my Twitch Channel. Join me on my Minecraft server for endless
+                adventures. Get ready for an extraordinary journey through time, space, and boundless entertainment.
             </p>
 
             <div class="mobile">
                 <br><br><br><br>
-                <iframe class="discord-widget-mobile" src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe>
+                <iframe class="discord-widget-mobile"
+                    src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe>
             </div>
 
-            <br><br>
-            <div class="socials">
-                <h2>Socials</h2><br>
-                <ul>
-                    <li><a href="https://www.youtube.com/@thedoctorttv" target="_blank">Check out my Youtube</a></li>
-                    <li><a href="https://www.twitch.tv/ttv_thedoctor" target="_blank">Check out my Twitch</a></li>
-                    <li><a href="https://twitter.com/TheDoctorTTV" target="_blank">Check out my Twitter</a></li>
-                    <li><a href="https://github.com/TheDoctor121027" target="_blank">Check out my GitHub</a></li>
-                    <li><a href="https://throne.com/thedoctorttv" target="_blank">Check out my Throne Wishlist</a></li>
-                    <li><a href="https://ko-fi.com/thedoctorttv" target="_blank">Support me on Ko-fi</a></li>
-                </ul>
-            </div>
-            <br>
-            <div>
+            <br><br><br>
+
+            <div class="minecraft-section">
                 <h2>Minecraft Server</h2> <br><br>
                 <p>
                 <div class="mc-server-guide">
                     <p>
-                        Explore, create, and survive in The Time Vortex Minecraft Server! Dive into a unique adventure with a global
-                        community on Bedrock or Java. Connect using the server IP: mc.thetimevortex.xyz [1.13 - 1.20], and
+                        Explore, create, and survive in The Time Vortex Minecraft Server! Dive into a unique adventure
+                        with a global
+                        community on Bedrock or Java. Connect using the server IP: mc.thetimevortex.xyz [1.13 - 1.20],
+                        and
                         unleash your Minecraft creativity and survival skills.
                     </p><br>
                     <h2>How to Join The Time Vortex Minecraft Server</h2> <br>
@@ -112,12 +103,33 @@
             </div>
 
         </main>
+
         <aside>
-            <iframe class="discord-widget" src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe>
+            <iframe class="discord-widget"
+                src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe><br><br><br>
+
         </aside>
     </div>
 
     <footer>
+        <div class="socials">
+            <ul>
+                <li><a href="https://www.youtube.com/@thedoctorttv" target="_blank"><img src="icons/youtube.svg"
+                            alt="Youtube"></a></li>
+                <li><a href="https://www.twitch.tv/ttv_thedoctor" target="_blank"><img src="icons/twitch.svg"
+                            alt="Twitch"></a></li>
+                <li><a href="https://twitter.com/TheDoctorTTV" target="_blank"><img src="icons/twitter.svg"
+                            alt="Twitter"></a></li>
+                <li><a href="https://github.com/TheDoctor121027" target="_blank"><img
+                            src="icons/github-mark-c791e9551fe4/github-mark/github-mark.svg" alt="GitHub"></a></li>
+                <li><a href='https://throne.com/thedoctorttv' target='_blank'><img
+                            src='icons/Throne Icon - Single (Gradient).png' alt='My Wishlist' /></a></li>
+                <li><a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img
+                            src='https://assets-global.website-files.com/5c14e387dab576fe667689cf/64f1a9ddd0246590df69e9ef_ko-fi_logo_02-p-500.png'
+                            alt='Buy Me a Coffee at ko-fi.com' /></a></li>
+            </ul>
+        </div>
+        <br>
         <p>&copy; T h e D o c t o r 2024.</p>
     </footer>
 </body>
