--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <div class="container">
         <main>
-            <h2>Welcome to TheTimeVortex</h2>
-            <br>
+            <img class="Banner" src="backgrounds/Welcome to the time vortex.jpg" alt="TheTimeVortexBanner">
+            <br><br><br>
             <img class="pfp"
                 src="https://images-ext-2.discordapp.net/external/fM_qHs1uVjy8swQWkpeG3_9wn40IDODrqqOzGPbJ6-k/%3Fsize%3D2048/https/cdn.discordapp.com/avatars/624961413500108830/0dec9c838c66d3cf33f0a211816359bd.webp?format=webp&width=671&height=671"
                 alt="TheDoctorTTV"> <br><br>
