--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="Banner" src="backgrounds/Welcome to the time vortex.jpg" alt="TheTimeVortexBanner">
             <br><br><br>
             <img class="pfp"
-                src="https://images-ext-2.discordapp.net/external/fM_qHs1uVjy8swQWkpeG3_9wn40IDODrqqOzGPbJ6-k/%3Fsize%3D2048/https/cdn.discordapp.com/avatars/624961413500108830/0dec9c838c66d3cf33f0a211816359bd.webp?format=webp&width=671&height=671"
+                src="https://cdn.discordapp.com/avatars/624961413500108830/9f027400d5e1a3600475747cf94c864f.webp?size=32"
                 alt="TheDoctorTTV"> <br><br>
             <p class="about-me">
                 I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll find
