--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="Banner" src="backgrounds/Welcome to the time vortex.jpg" alt="TheTimeVortexBanner">
             <br><br><br>
             <img class="pfp"
-                src="https://cdn.discordapp.com/avatars/624961413500108830/9f027400d5e1a3600475747cf94c864f.webp?size=32"
+                src="https://images-ext-1.discordapp.net/external/OHiWaKXql5FI2qRoFNBnoug3Z9puUO1yY7wSMyWPGCk/%3Fsize%3D2048/https/cdn.discordapp.com/avatars/624961413500108830/f154f51c0dc1a5249fa9606b291873d0.webp?format=webp&width=671&height=671"
                 alt="TheDoctorTTV"> <br><br>
             <p class="about-me">
                 I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll find
