--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image"
-        content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
+        content="icons/The Time Vortex Logo (Custom).png" />
 </head>
 
 <body>
