Update Minecraft server info

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <meta property="og:description"
         content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
     <meta property="og:url" content="https://thetimevortex.net" />
-    <meta property="og:image"
-        content="icons/The Time Vortex Logo (Custom).png" />
+    <meta property="og:image" content="icons/The Time Vortex Logo (Custom).png" />
 </head>
 
 <body>
@@ -30,13 +29,11 @@
         <main>
             <img class="Banner" src="backgrounds/Welcome to the time vortex.jpg" alt="TheTimeVortexBanner">
             <br><br><br>
-            <img class="pfp"
-                src="icons/TheDoctors Sitting (Small).png"
-                alt="TheDoctorTTV"> <br><br>
+            <img class="pfp" src="icons/TheDoctors Sitting (Small).png" alt="TheDoctorTTV"> <br><br>
             <p class="about-me">
-                I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll find
-                updates on my YouTube Channel and my Twitch Channel. Join me on my Minecraft server for endless
-                adventures. Get ready for an extraordinary journey through time, space, and boundless entertainment.
+                <strong>I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll find
+                    updates on my YouTube Channel and my Twitch Channel. Join me on my Minecraft server for endless
+                    adventures. Get ready for an extraordinary journey through time, space, and boundless entertainment.</strong>
             </p>
 
             <div class="mobile">
@@ -48,58 +45,36 @@
             <br><br><br>
 
             <div class="minecraft-section">
-                <h2>Minecraft Server</h2> <br><br>
-                <p>
-                <div class="mc-server-guide">
-                    <p>
-                        Explore, create, and survive in The Time Vortex Minecraft Server! Dive into a unique adventure
-                        with a global
-                        community on Bedrock or Java. Connect using the server IP: mc.thetimevortex.xyz [1.13 - 1.20],
-                        and
-                        unleash your Minecraft creativity and survival skills.
-                    </p><br>
-                    <h2>How to Join The Time Vortex Minecraft Server</h2> <br>
-                    <p>Follow the instructions below to join The Time Vortex Minecraft server on Java and Bedrock
-                        editions.</p><br>
+                <h2>TheTimeVortex Adventures in Time Minecraft Server</h2> <br><br>
+                <strong>Embark on an unparalleled adventure</strong> through the fabric of time and space with
+                <strong>TheTimeVortex</strong> modpack. This isn't your ordinary Minecraft experience; it's a journey
+                that stretches the limits of your imagination and tests your mettle as you navigate through the newly
+                reimagined <strong>End and Nether realms</strong>.
+                <br><br>
+                <p>🌀 <strong>Features Include:</strong></p>
+                <br>
+                <ul>
+                    <li>🛸 <strong>Pilot Your Own TARDIS:</strong> Ever dreamed of piloting your very own TARDIS? Well,
+                        dream no more! This modpack not only brings the iconic time machine to life but also integrates
+                        a vast array of enhancements and expansions.</li><br>
 
-                    <h3>Java Version:</h3><br>
-                    <ol>
-                        <li>Launch Minecraft Java Edition.</li>
-                        <li>Select "Multiplayer" from the main menu.</li>
-                        <li>Click the "Add Server" button.</li>
-                        <li>Name the server as "The Time Vortex".</li>
-                        <li>Enter the server IP: <code>mc.thetimevortex.xyz</code> in the "Server Address" field.</li>
-                        <li>Click "Done".</li>
-                        <li>Select The Time Vortex from the server list and click "Join Server".</li>
-                    </ol><br>
+                    <li>🗺️ <strong>Explore Enhanced Biomes:</strong> From the depths of BetterNether to the heights of
+                        BetterEnd, each biome is reimagined to offer new challenges and treasures.</li><br>
 
-                    <h3>Bedrock Version:</h3><br>
-                    <ol>
-                        <li>Launch Minecraft Bedrock Edition.</li>
-                        <li>Select "Play" from the main menu.</li>
-                        <li>Go to the "Servers" tab and click "Add Server".</li>
-                        <li>Name the server as "The Time Vortex".</li>
-                        <li>Enter the server IP: <code>mc.thetimevortex.xyz</code> and port: <code>8148</code>.</li>
-                        <li>Click "Done".</li>
-                        <li>Select The Time Vortex from the server list and click "Join Server".</li>
-                    </ol><br>
+                    <li>🔨 <strong>Forge Legendary Gear:</strong> With mods like MC Dungeons Armors, Artifacts, and
+                        Weapons, craft and equip gear worthy of a time lord's arsenal.</li><br>
 
-                    <h3>Bedrock Console Version:</h3><br>
-                    <ol>
-                        <li>Download the MC Server Connector app on your device: <a
-                                href="https://play.google.com/store/apps/details?id=com.smokiem.mcserverconnector&gl=US"
-                                target="_blank">Android</a> | <a
-                                href="https://apps.apple.com/us/app/mc-server-connector/id1548251304"
-                                target="_blank">iOS</a></li>
-                        <li>Launch the MC Server Connector app.</li>
-                        <li>Name the server as "The Time Vortex".</li>
-                        <li>Enter the server IP: <code>mc.thetimevortex.xyz</code> and port: <code>8148</code>.</li>
-                        <li>Click "Start Server". The server will appear under the Friends tab.</li>
-                        <li>Select The Time Vortex and click "Join".</li>
-                    </ol><br>
-                </div>
+                    <li>🧙 <strong>Wield Powerful Magic:</strong> Engage in the mystical arts with the Spell Engine and
+                        Spell Power Attributes. Your mastery of magic will be the key to overcoming the dangers that lie
+                        ahead.</li><br>
+                </ul>
 
-                </p>
+                <p><strong>Join TheTimeVortex Server</strong> and be part of a community that shares your passion for
+                    adventure and exploration. Whether you're a seasoned veteran or a curious newcomer, the time vortex
+                    awaits.</p>
+                <br><br>
+                <p>Are you ready to step in? Join the Discord, grab the minecraft role and check pins📌 for all information.</p>
+
             </div>
 
         </main>
