--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             <br><br><br>
             <img class="pfp" src="icons/TheDoctors Sitting (Small).png" alt="TheDoctorTTV"> <br><br>
             <p class="about-me">
-                <strong>I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll find
+                <strong>I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll
+                    find
                     updates on my YouTube Channel and my Twitch Channel. Join me on my Minecraft server for endless
-                    adventures. Get ready for an extraordinary journey through time, space, and boundless entertainment.</strong>
+                    adventures. Get ready for an extraordinary journey through time, space, and boundless
+                    entertainment.</strong>
             </p>
 
             <div class="mobile">
@@ -42,38 +44,59 @@
                     src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe>
             </div>
 
-            <br><br><br>
+            <br><br><br><br><br>
 
             <div class="minecraft-section">
-                <h2>TheTimeVortex Adventures in Time Minecraft Server</h2> <br><br>
-                <strong>Embark on an unparalleled adventure</strong> through the fabric of time and space with
-                <strong>TheTimeVortex</strong> modpack. This isn't your ordinary Minecraft experience; it's a journey
-                that stretches the limits of your imagination and tests your mettle as you navigate through the newly
-                reimagined <strong>End and Nether realms</strong>.
-                <br><br>
-                <p>🌀 <strong>Features Include:</strong></p>
-                <br>
-                <ul>
-                    <li>🛸 <strong>Pilot Your Own TARDIS:</strong> Ever dreamed of piloting your very own TARDIS? Well,
-                        dream no more! This modpack not only brings the iconic time machine to life but also integrates
-                        a vast array of enhancements and expansions.</li><br>
+                <div>
+                    <h1>🌀 <strong>TheTimeVortex Reimagined</strong> 🕰️</h1><br>
+                    <p><strong>Dive into the heart of adventure</strong> with <strong>TheTimeVortex Reimagined</strong>
+                        modpack, where every block, every shadow, and every light pixel is not just part of a game, but
+                        a gateway to endless realms of possibility. Forget everything you thought you knew about
+                        Minecraft; this is where your true test begins, challenging the very essence of your creativity
+                        and survival instincts across redefined landscapes.</p><br>
+                    <h2>🌟 What Awaits You:</h2><br>
+                    
+                        <ul>
+                            <li>🛸 <strong>Command the TARDIS:</strong> Your dreams of navigating time and space are
+                                about
+                                to get real. Commandeer your TARDIS, outfitted with more bells and whistles than ever,
+                                and
+                                set the course for the unknown.</li><br>
+                            <li>🌲 <strong>Revitalized Biomes:</strong> Journey through the BetterNether's fiery depths
+                                and
+                                soar across the BetterEnd's celestial gardens. Each biome is a masterpiece, meticulously
+                                crafted to enrich your exploration and discovery.</li><br>
+                            <li>🛠️ <strong>Craft Your Destiny:</strong> With an arsenal of mods focused on gear and
+                                artifacts, forge your path to becoming a legend. Every tool, every weapon, every piece
+                                of
+                                armor tells a story—your story.</li><br>
+                            <li>🧙‍♂️ <strong>Unleash Arcane Powers:</strong> Master the arcane, bending the very
+                                elements
+                                to your will with sophisticated magic systems. Whether you're enhancing your spells or
+                                channeling ancient energies, the arcane is yours to command.</li><br>
+                        </ul>
 
-                    <li>🗺️ <strong>Explore Enhanced Biomes:</strong> From the depths of BetterNether to the heights of
-                        BetterEnd, each biome is reimagined to offer new challenges and treasures.</li><br>
+                        <p>Embark on your adventure with mods that breathe life into every corner of your world, from
+                            <strong>Alex's Mobs</strong> offering new adversaries and allies, to the intricate machinery
+                            of
+                            <strong>Create</strong>, and the mystical depths of <strong>Mana and Artifice</strong>.
+                            Experience enhanced environments, animations, and a plethora of utilities that transform
+                            your
+                            Minecraft experience from a game into a saga. Your adventure through time and space is only
+                            a download away. Are you ready to step through the
+                            vortex?
+                        </p><br>
 
-                    <li>🔨 <strong>Forge Legendary Gear:</strong> With mods like MC Dungeons Armors, Artifacts, and
-                        Weapons, craft and equip gear worthy of a time lord's arsenal.</li><br>
 
-                    <li>🧙 <strong>Wield Powerful Magic:</strong> Engage in the mystical arts with the Spell Engine and
-                        Spell Power Attributes. Your mastery of magic will be the key to overcoming the dangers that lie
-                        ahead.</li><br>
-                </ul>
 
-                <p><strong>Join TheTimeVortex Server</strong> and be part of a community that shares your passion for
-                    adventure and exploration. Whether you're a seasoned veteran or a curious newcomer, the time vortex
-                    awaits.</p>
-                <br><br>
-                <p>Are you ready to step in? Join the Discord, grab the minecraft role and check pins📌 for all information.</p>
+
+                        <p><strong>Be Part of The Vortex:</strong> Join our dedicated server and immerse yourself in a
+                            community of like-minded adventurers. Whether forging alliances or delving into mysteries
+                            solo,
+                            your saga awaits.</p><br>
+                        <p>Are you prepared to redefine reality? Join the Discord, grab the minecraft role and check the
+                            pinned📌 message in the minecraft channel.
+                </div>
 
             </div>
 
