--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
             <div class="minecraft-section">
                 <div>
-                    <h1>🌀 <strong>TheTimeVortex Reimagined</strong> 🕰️</h1><br>
-                    <p><strong>Dive into the heart of adventure</strong> with <strong>TheTimeVortex Reimagined</strong>
+                    <h1>🌀 <strong>TheTimeVortex Adventures in Time</strong> 🕰️</h1><br>
+                    <p><strong>Dive into the heart of adventure</strong> with <strong>TheTimeVortex Adventures in Time</strong>
                         modpack, where every block, every shadow, and every light pixel is not just part of a game, but
                         a gateway to endless realms of possibility. Forget everything you thought you knew about
                         Minecraft; this is where your true test begins, challenging the very essence of your creativity
