--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
             <ul>
                 <li><a href="https://www.youtube.com/@thedoctorttv" target="_blank"><img src="icons/youtube.svg"
                             alt="Youtube"></a></li>
-                <li><a href="https://www.twitch.tv/ttv_thedoctor" target="_blank"><img src="icons/twitch.svg"
+                <li><a href="https://www.twitch.tv/thedoctorttv" target="_blank"><img src="icons/twitch.svg"
                             alt="Twitch"></a></li>
                 <li><a href="https://twitter.com/TheDoctorTTV" target="_blank"><img src="icons/twitter.svg"
                             alt="Twitter"></a></li>
-                <li><a href="https://github.com/TheDoctor121027" target="_blank"><img
+                <li><a class="github" href="https://github.com/TheDoctor121027" target="_blank"><img
                             src="icons/github-mark-c791e9551fe4/github-mark/github-mark.svg" alt="GitHub"></a></li>
                 <li><a href='https://throne.com/thedoctorttv' target='_blank'><img
                             src='icons/Throne Icon - Single (Gradient).png' alt='My Wishlist' /></a></li>
