--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <main>
             <img class="Banner" src="backgrounds/Welcome to the time vortex.jpg" alt="TheTimeVortexBanner">
             <br><br><br>
-            <img class="pfp" src="icons/TheDoctors Sitting (Small).png" alt="TheDoctorTTV"> <br><br>
+            <img class="pfp" src="icons/TheDoctor_Programming.png" alt="TheDoctorTTV"> <br><br>
             <p class="about-me">
                 <strong>I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll
                     find
