--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <li><a href="https://twitter.com/TheDoctorTTV" target="_blank"><img src="icons/twitter.svg"
                             alt="Twitter"></a></li>
                 <li><a class="github" href="https://github.com/TheDoctor121027" target="_blank"><img
-                            src="icons/github-mark-c791e9551fe4/github-mark/github-mark.svg" alt="GitHub"></a></li>
+                            src="icons/github-mark-c791e9551fe4/github-mark/github-mark.png" alt="GitHub"></a></li>
                 <li><a href='https://throne.com/thedoctorttv' target='_blank'><img
                             src='icons/Throne Icon - Single (Gradient).png' alt='My Wishlist' /></a></li>
                 <li><a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img
