--- a/index.html
+++ b/index.html
@@ -16,42 +16,28 @@
         content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/The Time Vortex Logo (Custom).png" />
+    <script src="header-footer.js"></script>
 </head>
 
 <body>
-    
     <global-header></global-header>
-    
-
     <div class="container">
-        <main>
+        <div class="main">
             <img class="Banner" src="backgrounds/Welcome to the time vortex.jpg" alt="TheTimeVortexBanner">
             <br><br><br>
             <img class="pfp" src="icons/TheDoctor_Programming.png" alt="TheDoctorTTV"> <br><br>
             <p class="about-me">
-                <strong>I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll
-                    find
-                    updates on my YouTube Channel and my Twitch Channel. Join me on my Minecraft server for endless
-                    adventures. Get ready for an extraordinary journey through time, space, and boundless
-                    entertainment.</strong>
+                I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll
+                find
+                updates on my YouTube Channel and my Twitch Channel. Join me on my Minecraft server for endless
+                adventures. Get ready for an extraordinary journey through time, space, and boundless
+                entertainment.
             </p>
-
-            <div class="mobile">
-                <br><br><br><br>
-                <iframe class="discord-widget-mobile"
-                    src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe>
-            </div> 
-
-        </main>
-
-        <aside>
-            <iframe class="discord-widget"
-                src="https://discord.com/widget?id=691428243877789726&theme=dark"></iframe><br><br><br>
-
-        </aside>
+            <br>
+            <h3><a href="http://dsc.gg/thetimevortex" target="_blank">Join The Discord Server</a></h3>
+        </div>
     </div>
     <global-footer></global-footer>
-    <script src="header-footer.js"></script>
 </body>
 
 </html>
