Image Size Optimization

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="main">
             <img class="Banner" src="backgrounds/Welcome to the time vortex.jpg" alt="TheTimeVortexBanner">
             <br><br><br>
-            <img class="pfp" src="icons/TheDoctor_Programming.png" alt="TheDoctorTTV"> <br><br>
+            <img class="pfp" src="icons/TheDoctor_Programming.jpg" alt="TheDoctorTTV"> <br><br>
             <p class="about-me">
                 I'm the Doctor, a Timelord and Demonlord, currently on my 121,027th regeneration. Here you'll
                 find
