--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description"
         content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
     <meta property="og:url" content="https://thetimevortex.net" />
-    <meta property="og:image" content="icons/The Time Vortex Logo (Custom).png" />
+    <meta property="og:image" content="icons/WebsiteLogo.ico" />
     <script src="header-footer.js"></script>
 </head>
 
