--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 Connect with like-minded individuals, discover new content, and make lasting friendships.
                 Come be a part of <strong>TheTimeVortex</strong> community and let's have fun together!</p>
             <br>
-            <h3><a href="http://dsc.gg/thetimevortex" target="_blank">Join The Discord Server</a></h3>
+            <h3><a href="https://discord.com/invite/UVqyGsf" target="_blank">Join The Discord Server</a></h3>
         </div>
         <br><br><br>
         <div class="minecraft-section">
