--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <global-header></global-header>
     <div class="container">
         <div class="main">
-            <img class="Banner" src="backgrounds/Welcome to the time vortex.jpg" alt="TheTimeVortexBanner">
+            <img class="Banner" src="backgrounds/Welcome to the time vortex.webp" alt="TheTimeVortexBanner">
             <br><br><br>
-            <img class="pfp" src="icons/TheDoctor_Programming.jpg" alt="TheDoctorTTV"> <br><br>
+            <img class="pfp" src="icons/TheDoctor_Programming.webp" alt="TheDoctorTTV"> <br><br>
             <h1>About Me</h1>
             <p class="about-me">
                 I'm the Doctor, a Time Lord and Demon Lord, currently on my 121,027th regeneration. Here you'll find
