--- a/socials.html
+++ b/socials.html
@@ -32,11 +32,11 @@
                         <a href="https://youtube.com/@thedoctorttv" target="_blank"> <img src="icons/youtube.svg" alt="Youtube"></a>
                         <a href="https://twitch.tv/thedoctorttv" target="_blank"> <img src="icons/twitch.svg" alt="Twitch"></a>
                         <a href="https://twitter.com/thedoctorttv" target="_blank"> <img src="icons/twitter.svg" alt="Twitter"></a>
-                        <a class="github" href="https://github.com/TheDoctor121027" target="_blank"><img src="icons/github-mark-c791e9551fe4/github-mark/github-mark.png" alt="GitHub"></a>
-                        <a href='https://throne.com/thedoctorttv' target='_blank'><img src='icons/Throne Icon - Single (Gradient).png' alt='My Wishlist' /></a>
+                        <a class="github" href="https://github.com/TheDoctor121027" target="_blank"><img src="icons/github-mark.webp" alt="GitHub"></a>
+                        <a href='https://throne.com/thedoctorttv' target='_blank'><img src='icons/Throne Icon - Single (Gradient).webp' alt='My Wishlist' /></a>
                         <a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img src='https://assets-global.website-files.com/5c14e387dab576fe667689cf/64f1a9ddd0246590df69e9ef_ko-fi_logo_02-p-500.png' alt='Buy Me a Coffee at ko-fi.com' /></a>
                         <a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175" target="_blank"><img src="https://assets.vrchat.com/www/favicons/safari-pinned-tab.svg" alt="VRChat Profile"></a>
-                        <a href="https://www.livechart.me/users/TheDoctor_121027/library" target="_blank"><img src="icons/LiveChart.jpg" alt="LiveChart"></a>
+                        <a href="https://www.livechart.me/users/TheDoctor_121027/library" target="_blank"><img src="icons/LiveChart.webp" alt="LiveChart"></a>
                         <a href="https://discord.com/invite/UVqyGsf" target="_blank"><img src="icons/Discord.svg" alt="Discord Server"></a>
                     </ul>
                 </li>
