Updated Socials Title

--- a/socials.html
+++ b/socials.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="main">
             <div class="socials">
-                <h1>Socials</h1>
+                <h1>TheDoctorTTV's Social Media</h1>
                 <br><br>
                 <li class="social-page-icons">
                     <ul>
