--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 exciting events and giveaways, you'll find a welcoming space with us.
                 Our dedicated moderators work tirelessly to ensure a safe and inclusive environment for everyone.
                 Connect with like-minded individuals, discover new content, and make lasting friendships.
-                Come be a part of <strong>TheTimeVortex</strong> community and let's have fun together!</p>
+                Come be a part of TheTimeVortex community and let's have fun together!</p>
             <br>
             <h3><a href="https://discord.com/invite/UVqyGsf" target="_blank">Join The Discord Server</a></h3>
         </div>
