Added Instagram to Socials

--- a/socials.html
+++ b/socials.html
@@ -31,6 +31,7 @@
                         <a href="https://youtube.com/@thedoctorttv" target="_blank"> <img src="icons/youtube.svg" alt="Youtube"></a>
                         <a href="https://twitch.tv/thedoctorttv" target="_blank"> <img src="icons/twitch.svg" alt="Twitch"></a>
                         <a href="https://twitter.com/thedoctorttv" target="_blank"> <img src="icons/twitter.svg" alt="Twitter"></a>
+                        <a href="https://www.instagram.com/thedoctorttv/" target="_blank"> <img src="icons/Instagram_Glyph_Gradient.svg" alt="Instagram"></a>
                         <a class="github" href="https://github.com/TheDoctor121027" target="_blank"><img src="icons/github-mark.webp" alt="GitHub"></a>
                         <a href='https://throne.com/thedoctorttv' target='_blank'><img src='icons/Throne Icon - Single (Gradient).webp' alt='My Wishlist' /></a>
                         <a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img src='https://assets-global.website-files.com/5c14e387dab576fe667689cf/64f1a9ddd0246590df69e9ef_ko-fi_logo_02-p-500.png' alt='Buy Me a Coffee at ko-fi.com' /></a>
