--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 entertainment.
             </p>
             <div class="pfp-container">
-                <img class="pfp" src="icons/TheDoctor-PFP-Fall.png" alt="TheDoctorTTV">
+                <img class="pfp" src="icons/TheDoctor-PFP-Fall.webp" alt="TheDoctorTTV">
             </div>
         </div>
         <div class="discord">
