Updated About Me

--- a/index.html
+++ b/index.html
@@ -29,13 +29,31 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                I'm the Doctor, a Time Lord and Demon Lord, currently on my 121,027th regeneration. Here you'll find
-                updates on my YouTube channel and my Twitch channel. Join me on my Minecraft server for endless
-                adventures. Get ready for an extraordinary journey through time, space, and boundless
-                entertainment.
+                Hello, I’m TheDoctor, this site is a place to learn more about me and stay connected through my YouTube,
+                Twitch, Discord Server or other of my Social Media. My lore is that I am a Time Lord who became a Demon Lord and on my 121,027th
+                regeneration. <br><br>
+                I’m a massive weeb who has watched countless anime, keeps up with new releases, and dives into tons of
+                manga and light novels. Fun fact: I built this entire website myself using HTML—no Wix, Squarespace or
+                anyother website builders
+                used. (No offense to those who use them.)
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="icons/TheDoctor-PFP-Fall.webp" alt="TheDoctorTTV">
+            </div>
+            <div class="skills">
+                <h1>Skills</h1>
+                <ul>
+                    <li>Programming</li>
+                    <li>3D Modeling</li>
+                    <li>Photography</li>
+                    <li>Videography</li>
+                    <li>Photo Editing</li>
+                    <li>Video Editing</li>
+                    <li>Writing (Just starting out)</li>
+                    <li>Game Development (Still learning the ropes)</li>
+                </ul> <br>
+                <p>While I may not be a master of any of these skills, I know enough to create what I want and bring my
+                    ideas to life.</p>
             </div>
         </div>
         <div class="discord">
