Update Dark Mode
- Removed media query for darkmode
- Added Button for darkmode
- Added Button Storage to save user preference

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="\icons\WebsiteLogo.ico">
     <link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
-
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
     <meta property="og:description"
@@ -17,7 +16,10 @@
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
     <script src="header-footer.js"></script>
+    <script type="text/javascript" src="darkmode.js" defer></script>
+
 </head>
+
 
 <body>
     <global-header></global-header>
@@ -30,7 +32,8 @@
             <h1>About Me</h1>
             <p class="about-me">
                 Hello, I’m TheDoctor, this site is a place to learn more about me and stay connected through my YouTube,
-                Twitch, Discord Server or other of my Social Media. My lore is that I am a Time Lord who became a Demon Lord and on my 121,027th
+                Twitch, Discord Server or other of my Social Media. My lore is that I am a Time Lord who became a Demon
+                Lord and on my 121,027th
                 regeneration. <br><br>
                 I’m a massive weeb who has watched countless anime, keeps up with new releases, and dives into tons of
                 manga and light novels. Fun fact: I built this entire website myself using HTML—no Wix, Squarespace or
