--- a/socials.html
+++ b/socials.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="\icons\WebsiteLogo.ico">
     <link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
-
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
     <meta property="og:description"
@@ -17,31 +16,42 @@
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
     <script src="header-footer.js"></script>
+    <script type="text/javascript" src="darkmode.js" defer></script>
 </head>
 
 <body>
     <global-header></global-header>
 
     <div class="container">
-            <div class="socials">
-                <h1>TheDoctorTTV's Social Media</h1>
-                <br><br>
-                <li class="social-page-icons">
-                    <ul>
-                        <a href="https://youtube.com/@thedoctorttv" target="_blank"> <img src="icons/youtube.svg" alt="Youtube"></a>
-                        <a href="https://twitch.tv/thedoctorttv" target="_blank"> <img src="icons/twitch.svg" alt="Twitch"></a>
-                        <a href="https://twitter.com/thedoctorttv" target="_blank"> <img src="icons/twitter.svg" alt="Twitter"></a>
-                        <a href="https://www.instagram.com/thedoctorttv/" target="_blank"> <img src="icons/Instagram_Glyph_Gradient.svg" alt="Instagram"></a>
-                        <a class="github" href="https://github.com/TheDoctor121027" target="_blank"><img src="icons/github-mark.svg" alt="GitHub"></a>
-                        <a href='https://throne.com/thedoctorttv' target='_blank'><img src='icons/Throne Icon - Single (Gradient).svg' alt='My Wishlist' /></a>
-                        <a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img src='icons/ko-fi.svg' alt='Buy Me a Coffee at ko-fi.com' /></a>
-                        <a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175" target="_blank"><img src="icons/vrchat.svg" alt="VRChat Profile"></a>
-                        <a href="https://www.livechart.me/users/TheDoctorTTV/library" target="_blank"><img src="icons/LiveChart.webp" alt="LiveChart"></a>
-                        <a href="https://discord.com/invite/UVqyGsf" target="_blank"><img src="icons/Discord.svg" alt="Discord Server"></a>
-                    </ul>
-                </li>
+        <div class="socials">
+            <h1>TheDoctorTTV's Social Media</h1>
+            <br><br>
+            <li class="social-page-icons">
+                <ul>
+                    <a href="https://youtube.com/@thedoctorttv" target="_blank"> <img src="icons/youtube.svg"
+                            alt="Youtube"></a>
+                    <a href="https://twitch.tv/thedoctorttv" target="_blank"> <img src="icons/twitch.svg"
+                            alt="Twitch"></a>
+                    <a href="https://twitter.com/thedoctorttv" target="_blank"> <img src="icons/twitter.svg"
+                            alt="Twitter"></a>
+                    <a href="https://www.instagram.com/thedoctorttv/" target="_blank"> <img
+                            src="icons/Instagram_Glyph_Gradient.svg" alt="Instagram"></a>
+                    <a class="github" href="https://github.com/TheDoctor121027" target="_blank"><img
+                            src="icons/github-mark.svg" alt="GitHub"></a>
+                    <a href='https://throne.com/thedoctorttv' target='_blank'><img
+                            src='icons/Throne Icon - Single (Gradient).svg' alt='My Wishlist' /></a>
+                    <a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img src='icons/ko-fi.svg'
+                            alt='Buy Me a Coffee at ko-fi.com' /></a>
+                    <a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175" target="_blank"><img
+                            src="icons/vrchat.svg" alt="VRChat Profile"></a>
+                    <a href="https://www.livechart.me/users/TheDoctorTTV/library" target="_blank"><img
+                            src="icons/LiveChart.webp" alt="LiveChart"></a>
+                    <a href="https://discord.com/invite/UVqyGsf" target="_blank"><img src="icons/Discord.svg"
+                            alt="Discord Server"></a>
+                </ul>
+            </li>
 
-            </div>
+        </div>
     </div>
     <br><br>
     <global-footer></global-footer>
