--- a/discord-bot-terms.html
+++ b/discord-bot-terms.html
@@ -9,7 +9,6 @@
   <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="\icons\WebsiteLogo.ico">
   <link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
-
   <meta property="og:type" content="website">
   <meta property="og:title" content="TheTimeVortex" />
   <meta property="og:description"
@@ -17,6 +16,7 @@
   <meta property="og:url" content="https://thetimevortex.net" />
   <meta property="og:image" content="icons/WebsiteLogo.ico" />
   <script src="header-footer.js"></script>
+  <script type="text/javascript" src="darkmode.js" defer></script>
 </head>
 
 <body>
