--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 Our dedicated moderators work tirelessly to ensure a safe and inclusive environment for everyone.
                 Connect with like-minded individuals, discover new content, and make lasting friendships.
                 Come be a part of TheTimeVortex community and let's have fun together!</p>
-            <br>
-            <h3><a href="https://discord.com/invite/UVqyGsf" target="_blank">Join The Discord Server</a></h3>
+            <br><br>
+            <h3><a class="discordinvite" href="https://discord.com/invite/UVqyGsf" target="_blank">Join The Discord Server</a></h3>
         </div>
     </div>
 
