--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <script src="header-footer.js"></script>
     <script type="text/javascript" src="darkmode.js" defer></script>
     <script>
-        (function() {
+        (function () {
             const darkmode = localStorage.getItem('darkmode');
             const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    
+
             if (darkmode === 'dark' || (darkmode === 'system' && systemPrefersDark)) {
                 document.documentElement.classList.add('darkmode');
             }
         })();
     </script>
-    
+
 
 
 </head>
@@ -57,17 +57,35 @@
             <div class="skills">
                 <h1>Skills</h1>
                 <ul>
-                    <li>Programming</li>
-                    <li>3D Modeling</li>
-                    <li>Photography</li>
-                    <li>Videography</li>
-                    <li>Photo Editing</li>
-                    <li>Video Editing</li>
-                    <li>Writing (Just starting out)</li>
-                    <li>Game Development (Still learning the ropes)</li>
-                </ul> <br>
-                <p>While I may not be a master of any of these skills, I know enough to create what I want and bring my
-                    ideas to life.</p>
+                    <li>
+                        Programming <span>★★★★★☆☆☆☆☆ (5/10)</span>
+                    </li>
+                    <li>
+                        3D Modeling <span>★★★★☆☆☆☆☆☆ (4/10)</span>
+                    </li>
+                    <li>
+                        Photography <span>★★★★★★★☆☆☆ (7/10)</span>
+                    </li>
+                    <li>
+                        Videography <span>★★★★★★★★☆☆ (8/10)</span>
+                    </li>
+                    <li>
+                        Photo Editing <span>★★★★★★★★★☆ (9/10)</span>
+                    </li>
+                    <li>
+                        Video Editing <span>★★★★★★★☆☆☆ (7/10)</span>
+                    </li>
+                    <li>
+                        Writing <span>★★★★☆☆☆☆☆☆ (4/10)</span>
+                    </li>
+                    <li>
+                        Game Development <span>★★★★★★☆☆☆☆ (6/10)</span>
+                    </li>
+                </ul>
+                <p>
+                    While I may not be an expert in these areas, I have enough knowledge and experience to bring my
+                    ideas to life.
+                </p>
             </div>
         </div>
         <div class="discord">
@@ -79,7 +97,8 @@
                 Connect with like-minded individuals, discover new content, and make lasting friendships.
                 Come be a part of TheTimeVortex community and let's have fun together!</p>
             <br><br>
-            <h3><a class="discordinvite" href="https://discord.com/invite/UVqyGsf" target="_blank">Join The Discord Server</a></h3>
+            <h3><a class="discordinvite" href="https://discord.com/invite/UVqyGsf" target="_blank">Join The Discord
+                    Server</a></h3>
         </div>
     </div>
 
