--- a/socials.html
+++ b/socials.html
@@ -48,7 +48,7 @@
                                                         src="icons/twitter.svg" alt="Twitter"></a>
                                         <a href="https://www.instagram.com/thedoctorttv/" target="_blank"> <img
                                                         src="icons/Instagram_Glyph_Gradient.svg" alt="Instagram"></a>
-                                        <a class="github" href="https://github.com/TheDoctor121027" target="_blank"><img
+                                        <a class="github" href="https://github.com/TheDoctorTTV" target="_blank"><img
                                                         src="icons/github-mark.svg" alt="GitHub"></a>
                                         <a href='https://throne.com/thedoctorttv' target='_blank'><img
                                                         src='icons/Throne Icon - Single (Gradient).svg'
