--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -11,24 +11,21 @@
     <link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
-    <meta property="og:description"
-        content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
+    <meta property="og:description" content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
     <script src="header-footer.js"></script>
     <script type="text/javascript" src="darkmode.js" defer></script>
     <script>
-        (function() {
+        (function () {
             const darkmode = localStorage.getItem('darkmode');
             const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    
+
             if (darkmode === 'dark' || (darkmode === 'system' && systemPrefersDark)) {
                 document.documentElement.classList.add('darkmode');
             }
         })();
     </script>
-    
-
 </head>
 
 <body>
@@ -36,55 +33,31 @@
 
     <div class="container">
         <div class="minecraft-section">
-            <h1>The Time Vortex MC Server</h1>
-            <p>Get ready to embark on an extraordinary journey through time and space with <strong>The Time Vortex
-                    Modpack v1.0</strong> on the <strong>The Time Vortex Official MC Server</strong>!</p>
-            <br>
-
-            <h2>New Features and Enhancements</h2>
-            <p>Experience Minecraft like never before with our latest update, packed with exciting new features,
-                powerful magic systems, and a universe expanded beyond imagination. Whether you’re navigating the
-                cosmos in your upgraded TARDIS, exploring revitalized biomes, or forging legendary gear, every
-                moment promises adventure and discovery.</p>
-            <br>
-
-            <h2>Join the Adventure</h2>
-            <p>Dive deep into the enhanced world of <strong>The Time Vortex Modpack</strong> with our custom
-                modpack, designed to transform your Minecraft experience. You can find the modpack on one of the
-                launchers provided below:</p>
-            <br>
+            <h1>TheTimeVortex Create Modpack</h1>
+<br>
+            <h3>Launcher Installation</h3>
             <ul>
-                <li><a href="https://modrinth.com/app" target="_blank">Modrinth</a></li>
-                <li><a href="https://multimc.org/#Download" target="_blank">MultiMC</a></li>
-                <li><a href="https://prismlauncher.org/" target="_blank">Prism Launcher</a></li>
+                <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a></li>
+                <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create" target="_blank">CurseForge Download</a></li>
             </ul>
-            <br>
-
-            <h3>Downloads</h3>
-            <p>All provided launchers support Modrinth Packs. <a
-                    href="https://modrinth.com/modpack/thetimevortex-adventures-in-time" target="_blank">Download
-                    from Modrinth</a>
-            </p>
-            <br>
-
-            <h2>Server Information</h2>
-            <p>After installing the modpack, connect to our dedicated server at:</p>
-            <p class="ip">mc.thetimevortex.xyz</p>
-            <br>
-            <h2>More Information on the Discord Server</h2>
-            <p><a href="http://dsc.gg/thetimevortex" target="_blank">TheTimeVortex Discord Server</a></p>
-            <br>
-
-            <h2>Ready to Explore?</h2>
-            <p>Whether you're a veteran of the Minecraft realms or a new explorer eager for adventure, <strong>The
-                    Time Vortex Modpack v1.0</strong> offers something for everyone. Command your own TARDIS, delve
-                into enhanced biomes, craft legendary gear, and wield powerful magic.</p>
-            <br>
-
-            <p>See you in the vortex!</p>
-
+<br>
+            <h3>Manual Installation</h3>
+            <ul>
+                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual.zip" target="_blank">Manual Download</a></li>
+                <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar" target="_blank">Forge Installer</a></li>
+            </ul>
+<br>
+            <h3>Important Information</h3>
+            <p>When updating, please backup your <strong>journeymap</strong> folder to save your wavepoints.</p>
+            <p>Lastly, FTB mods aren't on Modrinth due to copyright issues.</p>
+<br>
+            <h3>TheTimeVortex Create Server</h3>
+            <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
+            <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
         </div>
     </div>
     <br><br>
     <global-footer></global-footer>
 </body>
+
+</html>
