Updated MC Page and Added Stream Schedule

--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -53,6 +53,7 @@
             <h3>TheTimeVortex Create Server</h3>
             <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
             <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
+            <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
         </div>
     </div>
     <br><br>
