--- a/socials.html
+++ b/socials.html
@@ -18,16 +18,16 @@
         <script src="header-footer.js"></script>
         <script type="text/javascript" src="darkmode.js" defer></script>
         <script>
-                (function() {
-                    const darkmode = localStorage.getItem('darkmode');
-                    const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-            
-                    if (darkmode === 'dark' || (darkmode === 'system' && systemPrefersDark)) {
-                        document.documentElement.classList.add('darkmode');
-                    }
+                (function () {
+                        const darkmode = localStorage.getItem('darkmode');
+                        const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+
+                        if (darkmode === 'dark' || (darkmode === 'system' && systemPrefersDark)) {
+                                document.documentElement.classList.add('darkmode');
+                        }
                 })();
-            </script>
-            
+        </script>
+
 
 </head>
 
@@ -65,6 +65,12 @@
                         </li>
 
                 </div>
+
+                <div class="twitch-stream">
+                        <iframe src="https://player.twitch.tv/?thedoctorttv&parent=thetimevortex.net" frameboarder="0" height="720" width="1280" allowfullscreen>
+                        </iframe>
+                </div>
+
         </div>
         <br><br>
         <global-footer></global-footer>
